--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,7 @@
-@font-face {
-    font-family: 'iconfont';  /* project id 1893723 */
-    src: url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.eot');
-    src: url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.woff') format('woff'),
-    url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_1893723_wag6nkbutcq.svg#iconfont') format('svg');
+.index {
+  background: red;
 }
-.iconfont{
-    font-family:"iconfont" !important;
-    font-size:16px;font-style:normal;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width: 0.2px;
-    -moz-osx-font-smoothing: grayscale;
-}
-.index{
-    background: red;
-    list-style: none;
-    background: url('./static/phone2.png');
-}
-.index a{
-    color: #000;
-    text-decoration: none;
+
+.index a {
+  color: #fff;
 }
